# counter

./: .gitignore  README.md  pyproject.toml
counter-aiohttp/: README.md  pyproject.toml
counter-aiohttp/counter_aiohttp/: main.py
counterdjango/: manage.py
counterdjango/counterapp/: apps.py  models.py  views.py
counterdjango/counterapp/migrations/: 0001_initial.py  0002_mysqlcounter_rename_sqlite_count_obj_counter_count.py
counterdjango/counterdjango/: README.md  asgi.py  db_router.py  settings.py  urls.py  wsgi.py
locust/: README.md  locustfile.py
